--- a/Practice/Bstation.CSS
+++ b/Practice/Bstation.CSS
@@ -14,7 +14,7 @@ th, td { /* table elements 表格元素 */
 body,
 button, input, select, textarea { /* for ie */
     /*font: 12px/1 Tahoma, Helvetica, Arial, "宋体", sans-serif;*/
-    font: 12px/1 Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif; /* 用 ascii 字符表示，使得在任何编码下都无问题 */
+    font: 14px -apple-system,BlinkMacSystemFont,Helvetica Neue,Helvetica,Arial,PingFang SC,Hiragino Sans GB,Microsoft YaHei,sans-serif; /* 用 ascii 字符表示，使得在任何编码下都无问题 */
 }
 h1 { font-size: 18px; /* 18px / 12px = 1.5 */ }
 h2 { font-size: 16px; }
@@ -30,7 +30,7 @@ ul, ol { list-style: none; }
 
 /* 4、 重置文本格式元素*/
 
-a { text-decoration: none; }
+a { text-decoration: none;}
 a:hover { text-decoration: underline; }
 abbr[title], acronym[title] { /* 注：1.ie6 不支持 abbr; 2.这里用了属性选择符，ie6 下无效果 */
 border-bottom: 1px dotted;
